# peoplereadmes

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  manifest.json  pyproject.toml
.agents/skills/testing-cli/: SKILL.md
.agents/skills/testing-peoplereadme-cli/: SKILL.md
.github/workflows/: ci.yml
agents/: project-navigator-agent.md
docs/: architecture.md
personas/riley-walz/: README.md
personas/riley-walz/context/: advanced-technical-intelligence.md  brain-model.md  context-pack.md  idea-engine.md  project-patterns.md  safety-boundaries.md  tacit-knowledge.md  taste-and-voice.md  technical-playbook.md
personas/riley-walz/data/: evidence-map.json  heuristics.json  projects.json  quote-bank.json  sources.json  technical-ability-model.json
personas/riley-walz/evals/: brain-model-rubric.md  rubric.md
personas/riley-walz/examples/: project-brief.md
personas/riley-walz/prompts/: deep-context-system.md  system-prompt.md  task-modes.md
schemas/: persona.schema.json
src/peoplereadme/: __init__.py  cli.py  evidence.py  initialize.py  models.py  repo.py  traces.py  validate.py
src/peoplereadme/compiler/: __init__.py  compile.py  data.py  metric.py  program.py  runtime.py
src/peoplereadme/exports/: __init__.py  bundle.py  writers.py
src/peoplereadme/harness/: __init__.py  calibration.py  dimensions.py  generation.py  lm.py  pairwise.py  rubric.py  (+2 more)
tests/: conftest.py  test_cli.py  test_compiler.py  test_exports.py  test_harness.py  test_ingest.py  test_init.py  test_schema.py  test_traces.py  test_webapp.py
(+33 files in other folders)
