[project]
name = "peoplereadme"
version = "0.1.0"
description = "Compiler, harness, and export layer for evidence-bound persona packages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "httpx>=0.27",
    "defusedxml>=0.7",
    "litellm>=1.40",
    "dspy>=3.2.1",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
peoplereadme = "peoplereadme.cli:app"

[project.urls]
Repository = "https://github.com/muratcankoylan/peoplereadmes"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peoplereadme"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
